# learn_django

./: .pre-commit-config.yaml  README.md  pyproject.toml
