[tool.poetry]
name = "learn-django"
version = "0.1.0"
description = ""
authors = ["Iqbal Syifa Mahmuda <bal.mahmuda@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "learn_django"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "~4.1"
psycopg2 = "^2.9.3"
django-treebeard = "^4.5.1"
xhtml2pdf = "^0.2.8"
django-money = "^3.0.0"
django-environ = "^0.9.0"
django-linear-migrations = "^2.5.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
